# ddd-django

./: README.md  docker-compose.yml  dockerfile  makefile  manage.py  pyproject.toml  setup.cfg
docs/: drf.md
nginx/: default.conf
src/: main.py  routers.py  worker.py
src/api/v1/: urls.py
src/api/v1/products/: filters.py  views.py
src/apps/notifications/: adapters.py  services.py
src/apps/products/: models.py  services.py
src/apps/products/tests/: test_models.py  test_services.py
src/auth/application/: dtos.py  ports.py  usecases.py
src/auth/application/ports/: driven.py  driving.py
src/auth/application/usecases/: add_client.py
src/auth/domain/: entities.py
src/auth/external_interface/: controllers.py  router.py  serializers.py
src/auth/infra/: db_models.py  django_repo.py  in_memory_repo.py  mappers.py  uow.py
src/auth/presentation/: container.py  controllers.py  router.py  serializers.py
src/clients/domain/: entities.py
src/clients/external_interface/: controllers.py  serializers.py
src/clients/infra/: models.py
src/config/: __init__.py  asgi.py  auth.py  base.py  cache.py  databases.py  logging.py  rest.py  urls.py
src/config/settings/: __init__.py  base.py  logging.py  rest.py
src/project/: containers.py  settings.py  urls.py
src/seedwork/: exceptions.py  mediator.py
src/seedwork/tests/: test_mediator.py
src/shared/domain/: model.py
src/shared/presentation/: serializers.py
tests/: conftest.py  test_pass.py
tests/shared/infra/: conftest.py  test_uow.py
tests/tests/: conftest.py  test_models.py  test_repo.py
(+10 files in other folders)
